<resources>
    <string name="app_name">Lab 4 Milestone 2</string>
    <string name="backgroundphoto">backgroundphoto</string>
    <string name="hiker_s_watch">Hiker\'s Watch</string>
    <string name="latitude">Latitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="address">Address</string>
    <string name="altitude">Altitude</string>
    <string name="longitude">Longitude</string>
</resources>
